Development Portal (2020-04-14 shi)
==============================
Update glossary for search
Update placeholder text for activity list query
Display rows when only result period and no value is found
Update css for fullwidth search filters
Update dquery css


Development Portal (2020-04-12 shi)
==============================
Display codes for transaction attributes
Update css


Development Portal (2020-04-12 shi)
==============================
Update glossary for search
Add trending search buttons
Update css
Add keyword search to filters
Update all translations


Development Portal (2020-04-11 shi)
==============================
Display array for default-aid-type
Fix layout legibility for result indicator reference
Fix layout legibility for receiver and provider columns in tables
Update placeholder text for total commitment search dropdown


Development Portal (2020-04-08 shi)
==============================
Add print-friendly css for new SAVi
Fix typo for @activity-id in participating-org
Fix urls for @ref
Display name element for org files


Development Portal (2020-04-04 shi)
==============================
Update crs-add section for new SAVi
Display table when loan-status elements are available
CSS changes


Development Portal (2020-04-03 shi)
==============================
Update policy marker and tag conditions
Display as url to tag vocab when available
CSS changes
Update layout display for result indicators
Update new SAVi element column widths
Move tag and policy-marker further up
Remove link for owner-org id


Development Portal (2020-04-02 shi)
==============================
Display policy marker narrative if vocab 99
Display policy marker code if vocab 99
Display policy marker vocabulary-uri if vocab 99
Display activity date percentile as loading bar
Change layout for activity dates
CSS changes
Display glossary for new sector graph
Add check for when length is not found
Add check for when result facets are not provided

