@@ -1,3 +1,11 @@
+Development Portal (2020-04-15 shi)
+==============================
+Check if sector code has narrative if non-dac
+Display percentage complete for activity dates on hover
+Add empty description for policy marker significance
+Update css
+
+
 Development Portal (2020-04-14 shi)
 ==============================
 Update glossary for search
